--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,5 +14,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
+          GIST_ID: 300012d082516093587b44ded0563f48
           LOCALE: ko-KR
